fixed overflow issue on side nav and added before element

--- a/dressapp/app/assets/stylesheets/suitcases.scss
+++ b/dressapp/app/assets/stylesheets/suitcases.scss
@@ -77,7 +77,24 @@ p, li, a {
   overflow-x: hidden;
   transition: 0.5s;
   -webkit-box-shadow: 7px 5px 7px -2px #ff9999;
+
+  &.is-dragging {
+    overflow: visible;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 100;
+      background-color: rgba(0,0,0,0.5);
+    }
+  }
+
 }
+
 
 #open-nav {
   display: block;
@@ -90,8 +107,8 @@ p, li, a {
   top: 0;
   text-align: right;
   font-size: 20px;
-  width: 20%;
   display: inline-block;
+  float: right;
 }
 
 .clothes-container {
@@ -119,8 +136,16 @@ p, li, a {
 
 #dresses {
   display: none;
+  height: 200px;
+  width: auto;
+  transition: margin-left .5s;
+  margin-bottom: 50px;
 }
 
+#dresses img {
+  height: 200px;
+  width: auto;
+}
 
 .clothes-container p {
   text-align: center;
@@ -218,30 +243,30 @@ h4 {
 }
 
 .side-nav-buttons {
+  height: 55px;
+  position: relative;
   padding-top: 10px;
   overflow: hidden;
   font-family: 'Open Sans', sans-serif;
 }
 
-#other-items {
-  position: relative;
-  display: inline-block;
-  width: 25%;
-  text-align: left;
-  padding-left: 15px;
-}
+// #other-items {
+//   position: relative;
+//   display: inline-block;
+//   width: 25%;
+//   text-align: left;
+//   padding-left: 15px;
+// }
 
 #view-all {
   position: relative;
   display: inline-block;
-  width: 25%;
   text-align: right;
 }
 
 #add-items {
   position: relative;
   display: inline-block;
-  width: 25%;
   text-align: left;
 }
 
@@ -288,4 +313,23 @@ h4 {
 }
 .weather-details {
   display: inline;
+}
+
+.clothes-types {
+  margin-left: 10px;
+  width: 30%;
+  display: inline-block;
+  position: relative;
+}
+
+.clothes-types a {
+  display: block;
+}
+
+.main-buttons {
+  width: 60%;
+  display: inline-block;
+  position: relative;
+  float: right;
+  margin-right: 15px;
 }
